--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build-deb-package:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -22,12 +22,38 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Switch to backend project directory
+        run: cd $GITHUB_WORKSPACE/graduation-project-system-backend/
+
+      - name: Installing system build prerequisites
+        run: |
+          apt install ruby ruby-dev rubygems build-essential 
+          gem install --no-document fpm
+      
+      - name: Installing Python build prerequisites
+        run: python -m pip install PyInstaller
+
+      - name: Installing Python project dependencies
+        run: python -m pip install -r requirements.txt
+
+      - name: Bundle with PyInstaller
+        run: python -m PyInstaller ./server.py --onefile -n gpks-server
+
+      - name: Pack executable into deb-package
+        run: fpm --config-files ./config.yml -t deb -n gpks-server -s dir ./dist/gpks-server/=/usr/bin/gpks-server ./config.yml=/etc/gpks-server/config.yml
+  
+  download-deb-package:
+    runs-on: ubuntu-latest
+    needs: build-deb-package
+    steps:
+      - name: Download built deb-package
+        uses: actions/download-artifact@v2
+        with:
+          name: gpks-server-linux
+
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      # - name: Run a multi-line script
+      #   run: |
+      #     echo Add other actions to build,
+      #     echo test, and deploy your project.
