--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Installing system build prerequisites
         run: |
-          apt install ruby ruby-dev rubygems build-essential 
+          sudo apt install ruby ruby-dev rubygems build-essential 
           gem install --no-document fpm
       
       - name: Installing Python build prerequisites
