--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -30,8 +30,11 @@ jobs:
           sudo apt install ruby ruby-dev rubygems build-essential 
           sudo gem install --no-document fpm
       
+      - name: Check python version
+        run: python --version
+      
       - name: Installing Python build prerequisites
-        run: python -m pip install PyInstaller
+        run: python -m pip install -U PyInstaller
 
       - name: Installing Python project dependencies
         run: python -m pip install -r requirements.txt
