--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -27,14 +27,14 @@ jobs:
 
       - name: Installing system build prerequisites
         run: |
-          sudo apt install ruby ruby-dev rubygems build-essential 
+          sudo apt install ruby ruby-dev rubygems build-essential python3 python3-pip
           sudo gem install --no-document fpm
       
       - name: Check python version
         run: python3 --version
       
       - name: Installing Python build prerequisites
-        run: python3 -m pip install -U PyInstaller
+        run: python3 -m pip install -U setuptools PyInstaller
 
       - name: Installing Python project dependencies
         run: python3 -m pip install -r requirements.txt
