--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Installing system build prerequisites
         run: |
           sudo apt install -y ruby ruby-dev rubygems build-essential python3 python3-pip python3-setuptools python3-venv python3-wheel
-          sudo gem install -y --no-document fpm
+          sudo gem install --no-document fpm
       
       - name: Check python version
         run: python3 --version
