Set backend CI working dir

--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -27,9 +27,6 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Switch to backend project directory
-        run: cd ${{project-folder}}
-
       - name: Installing system build prerequisites
         run: |
           sudo apt install -y ruby ruby-dev rubygems build-essential python3 python3-pip python3-setuptools python3-venv python3-wheel
@@ -45,10 +42,10 @@ jobs:
         run: ls -lah .
 
       - name: Installing Python project dependencies
-        run: python3 -m pip install -r ./graduation-project-system-backend/requirements.txt
+        run: python3 -m pip install -r ./requirements.txt
 
       - name: Bundle with PyInstaller
-        run: python3 -m PyInstaller ./graduation-project-system-backend/server.py --onefile -n gpks-server
+        run: python3 -m PyInstaller ./server.py --onefile -n gpks-server
 
       - name: Pack executable into deb-package
         run: fpm --config-files ./config.yml -t deb -n gpks-server -s dir ./dist/gpks-server/=/usr/bin/gpks-server ./config.yml=/etc/gpks-server/config.yml
