--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ${{ GITHUB_WORKSPACE }}/graduation-project-system-backend/
+        working-directory: $GITHUB_WORKSPACE/graduation-project-system-backend/
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
