--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -6,7 +6,7 @@ name: gpks-backend-ci
 # events but only for the main branch
 
 env: 
-  root: $GITHUB_WORKSPACE/graduation-project-system-backend/
+  root: ./graduation-project-system-backend/
 
 
 on:
