--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -31,24 +31,24 @@ jobs:
 
       - name: Installing system build prerequisites
         run: |
-          sudo apt install -y ruby ruby-dev rubygems build-essential python3 python3-pip python3-setuptools python3-venv python3-wheel
+          sudo apt install -y ruby ruby-dev rubygems build-essential python3.8 python3.8-pip python3.8-setuptools python3.8-venv python3.8-wheel
           sudo gem install --no-document fpm
       
       - name: Check python version
-        run: python3 --version
+        run: python3.8 --version
       
       - name: Installing Python build prerequisites
-        run: python3 -m pip install -U PyInstaller
+        run: python3.8 -m pip install -U PyInstaller
 
       - name: Show contents of directory
         run: ls -lah ${{ env.root }}
 
       - name: Installing Python project dependencies
-        run: python3 -m pip install -r ${{env.root}}/requirements.txt
+        run: python3.8 -m pip install -r ${{env.root}}/requirements.txt
 
 
       - name: Bundle with PyInstaller
-        run: python3 -m PyInstaller ${{env.root}}/server.py --onefile -n gpks-server
+        run: python3.8 -m PyInstaller --distpath ${{env.root}}/dist ${{env.root}}/server.py --onefile -n gpks-server
 
 
       - name: Pack executable into deb-package
