--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Installing system build prerequisites
         run: |
-          sudo apt install -y ruby ruby-dev rubygems build-essential python3.8 python3-pip python3-setuptools python3-venv python3-wheel
+          sudo apt install -y ruby ruby-dev rubygems build-essential python3.8 python3-dev python3-pip python3-setuptools python3.8-venv python3-wheel
           sudo gem install --no-document fpm
       
       - name: Check python version
