--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -6,7 +6,7 @@ name: gpks-backend-ci
 # events but only for the main branch
 
 env: 
-  root: ./graduation-project-system/graduation-project-system-backend/
+  root: ./graduation-project-system-backend/
   projectName: gpks-server
 
 
@@ -57,23 +57,6 @@ jobs:
       - name: Pack executable into deb-package
         run: fpm --config-files ${{ env.root }}/config.yml -t deb -n ${{ env.projectName }} -s dir ${{ env.root }}/dist/${{ env.projectName }}/=/usr/bin/${{ env.projectName }} ${{ env.root }}/config.yml=/etc/${{ env.projectName }}/config.yml
 
-  
-  release-deb-package:
-    runs-on: ubuntu-latest
-    needs: build-deb-package
-    steps:
-      - name: Upload built deb-package
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ env.projectName }}
-          path: ${{ env.root }}/dist/
-
-      - name: Show current root path
-        run: ls -lah .
-        
-      - name: Show current dist path
-        run: ls -lah ${{ env.root }}/dist/
-
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -95,6 +78,37 @@ jobs:
           asset_path: ${{ env.root }}/dist/${{ env.projectName }}.zip
           asset_name: ${{ env.projectName }}.zip
           asset_content_type: application/zip
+  
+  # release-deb-package:
+  #   runs-on: ubuntu-latest
+  #   needs: build-deb-package
+  #   steps:
+
+  #     - uses: actions/checkout@v2
+  #       with:
+  #        submodules: true
+
+  #     - name: Create Release
+  #       id: create_release
+  #       uses: actions/create-release@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         tag_name: ${{ github.ref }}
+  #         release_name: Release ${{ github.ref }}
+  #         draft: false
+  #         prerelease: false
+
+  #     - name: Upload Release Asset
+  #       id: upload-release-asset 
+  #       uses: actions/upload-release-asset@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+  #         asset_path: ${{ env.root }}/dist/${{ env.projectName }}.zip
+  #         asset_name: ${{ env.projectName }}.zip
+  #         asset_content_type: application/zip
 
 
       # Runs a set of commands using the runners shell
