--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -67,6 +67,12 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+      
+      - name: Show dir
+        run: ls -lah ${{ env.root }}
+
+      - name: Show dir up
+        run: ls -lah ${{ env.root }}/../
 
       - name: Upload Release Asset
         id: upload-release-asset 
