--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -57,14 +57,17 @@ jobs:
       - name: Pack executable into deb-package
         run: fpm --config-files ${{ env.root }}/config.yml -t deb -n ${{ env.projectName }} -s dir ${{ env.root }}/dist/${{ env.projectName }}/=/usr/bin/${{ env.projectName }} ${{ env.root }}/config.yml=/etc/${{ env.projectName }}/config.yml
 
+      - name: Set env
+        run:  echo ::set-env name=current::$(date "+%Y%m%d_%H%M")
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: v${{ current }}
+          release_name: Release ${{ current }}
           draft: false
           prerelease: false
       
