--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -67,7 +67,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v1
-          release_name: Release ${{ current }}
+          release_name: Release ${{ env.current }}
           draft: false
           prerelease: false
       
