--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -5,9 +5,16 @@ name: gpks-backend-ci
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
 
-env: 
-  root: ./graduation-project-system-backend/
+env:
   projectName: gpks-server
+
+  root: ./graduation-project-system-backend/
+
+  distWindows: ${{ env.root }}/dist/windows/
+  distLinux: ${{ env.root }}/dist/linux/
+  
+  bundleWindows: ${{ env.root }}/bundle/windows/
+  bundleLinux: ${{ env.root }}/bundle/linux/
 
 
 on:
@@ -51,14 +58,20 @@ jobs:
 
 
       - name: Bundle with PyInstaller
-        run: python3.8 -m PyInstaller --distpath ${{ env.root }}/dist ${{ env.root }}/server.py --onefile -n ${{ env.projectName }}
+        run: python3.8 -m PyInstaller --distpath ${{ env.distLinux }} ${{ env.root }}/server.py --onefile -n ${{ env.projectName }}
 
 
       - name: Pack executable into deb-package
-        run: fpm --config-files ${{ env.root }}/config.yml -t deb -n ${{ env.projectName }} -p ${{ env.root }}/dist/ -s dir ${{ env.root }}/dist/${{ env.projectName }}/=/usr/bin/${{ env.projectName }} ${{ env.root }}/config.yml=/etc/${{ env.projectName }}/config.yml
+        run: fpm --config-files ${{ env.root }}/config.yml -t deb -n ${{ env.projectName }} -p ${{ env.bundleLinux }} -s dir ${{ env.distLinux }}/${{ env.projectName }}/=/usr/bin/${{ env.projectName }} ${{ env.root }}/config.yml=/etc/${{ env.projectName }}/config.yml
 
       - name: Set env
         run:  echo ::set-env name=current::$(date "+%Y%m%d_%H%M")
+
+      - name: Show dir
+        run: ls -lah ${{ env.root }}
+
+      - name: Show dir up
+        run: ls -lah ${{ env.root }}/../
 
       - name: Create Release
         id: create_release
@@ -66,16 +79,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v1
+          tag_name: v${{ env.current }}
           release_name: Release ${{ env.current }}
           draft: false
           prerelease: false
-      
-      - name: Show dir
-        run: ls -lah ${{ env.root }}
-
-      - name: Show dir up
-        run: ls -lah ${{ env.root }}/../
 
       - name: Upload Release Asset
         id: upload-release-asset 
@@ -84,7 +91,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ${{ env.root }}/../*.deb
+          asset_path: ${{ env.distLinux }}/
           asset_name: ${{ env.projectName }}
           asset_content_type: application/deb
   
