--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -36,6 +36,11 @@ jobs:
         with:
           submodules: true
 
+      - name: Creating folders
+        run: |
+          mkdir -p ${{ env.distLinux }}
+          mkdir -p ${{ env.bundleLinux }}
+            
       - name: Installing system build prerequisites
         run: |
           sudo apt install -y ruby ruby-dev rubygems build-essential python3.8 python3.8-dev python3-pip python3-setuptools python3.8-venv python3-wheel
