Updated CI, archived bundle

--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -82,7 +82,7 @@ jobs:
         run: ls -lah ${{ env.bundleLinux }}
       
       - name: Archive bundle
-        run: zip --junk-paths ${{ env.bundleLinux }}
+        run: zip -r bundle_linux.zip ${{ env.bundleLinux }}/
       
       - name: Show root
         run: ls -lah ${{ env.root }}
@@ -93,8 +93,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ env.current }}
-          release_name: Release ${{ env.current }}
+          tag_name: v${{ env.current }}_linux
+          release_name: Linux release ${{ env.current }}
           draft: false
           prerelease: false
 
@@ -105,8 +105,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ${{ env.root }}/bundle.zip
-          asset_name: ${{ env.projectName }}
+          asset_path: ${{ env.root }}/bundle_linux.zip
+          asset_name: ${{ env.projectName }}_linux
           asset_content_type: application/zip
   
   # release-deb-package:
