--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -25,13 +25,10 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build-deb-package:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
@@ -127,40 +124,93 @@ jobs:
           asset_name: ${{ env.projectName }}_linux.zip
           asset_content_type: application/zip
   
-  # release-deb-package:
-  #   runs-on: ubuntu-latest
-  #   needs: build-deb-package
-  #   steps:
+  build-win-installer:
+    runs-on: windows-latest
+    steps:
 
-  #     - uses: actions/checkout@v2
-  #       with:
-  #        submodules: true
+      - uses: actions/checkout@v2
+        with:
+         submodules: true
+        
+      - name: Install system prerequisites
+        run: choco install python --version=3.8.0
 
-  #     - name: Create Release
-  #       id: create_release
-  #       uses: actions/create-release@v1
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       with:
-  #         tag_name: ${{ github.ref }}
-  #         release_name: Release ${{ github.ref }}
-  #         draft: false
-  #         prerelease: false
+      - name: Check python version
+        run: python3.8 --version
+      
+      - name: Installing Python build prerequisites
+        run: python3.8 -m pip install -U PyInstaller
 
-  #     - name: Upload Release Asset
-  #       id: upload-release-asset 
-  #       uses: actions/upload-release-asset@v1
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       with:
-  #         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-  #         asset_path: ${{ env.root }}/dist/${{ env.projectName }}.zip
-  #         asset_name: ${{ env.projectName }}.zip
-  #         asset_content_type: application/zip
+      # - name: Show contents of directory
+      #   run: ls -lah ${{ env.root }}
 
+      - name: Installing Python project dependencies
+        run: python3.8 -m pip install -r ${{ env.root }}/requirements.txt
 
-      # Runs a set of commands using the runners shell
-      # - name: Run a multi-line script
-      #   run: |
-      #     echo Add other actions to build,
-      #     echo test, and deploy your project.
+      - name: Bundle with PyInstaller
+        run: python3.8 -m PyInstaller --distpath ${{ env.distWindows }} ${{ env.root }}/server.py --onefile -n ${{ env.projectName }}
+      
+      - name: Run Inno Setup compiler
+        run: iscc /p /O "${{ env.bundleWindows }}" /F "${{ env.projectName }}-windows-installer" /S byparam=$p "${{ env.root }}\\Installer\\${{ env.projectName }}.iss"
+
+      - name: Archive bundle
+        run: zip -j -r bundle_windows.zip ${{ env.bundleWindows }}/
+      
+      # - name: Show root
+      #   run: ls -lah ${{ env.root }}
+      
+      # - name: Show root up
+      #   run: ls -lah ${{ env.root }}/../
+
+      # - name: Show dist folder
+      #   run: ls -lah ${{ env.distLinux }}
+      
+      # - name: Show bundle folder
+      #   run: ls -lah ${{ env.bundleLinux }}
+      
+      - name: Set release datetime
+        run:  echo ::set-env name=current::$(date "+%Y%m%d_%H%M")
+
+      - name: Create Windows Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ env.current }}_windows
+          release_name: Windows release ${{ env.current }}
+          body: |
+            ## Windows release ${{ env.current }} changes
+
+            History from `${{ steps.attrs.outputs.tail }}` to `${{ steps.attrs.outputs.head }}`
+
+            ### Commits
+
+            ${{ steps.attrs.outputs.commits }}
+
+            ### Pull Requests
+
+            ${{ steps.attrs.outputs.prs }}
+
+            ### Contributors
+
+            ${{ steps.attrs.outputs.contributors }}
+
+            ### Files
+
+            ```
+            ${{ steps.attrs.outputs.files }}
+            ```
+          draft: false
+          prerelease: false
+
+      - name: Upload Windows Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ env.rootUp }}/bundle_windows.zip
+          asset_name: ${{ env.projectName }}_windows.zip
+          asset_content_type: application/zip
