--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -131,9 +131,13 @@ jobs:
       - uses: actions/checkout@v2
         with:
          submodules: true
-        
-      - name: Install system prerequisites
-        run: choco install python --version=3.8.0
+      
+      - name: Setup Python 3.8
+        id: setup-python-win
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
 
       - name: Check python version
         run: python3.8 --version
