--- a/.github/workflows/gpks-backend-ci.yml
+++ b/.github/workflows/gpks-backend-ci.yml
@@ -143,7 +143,7 @@ jobs:
         run: python -c "import sys; print(sys.version)"
       
       - name: Installing Python build prerequisites
-        run: python -m pip install -U PyInstaller
+        run: python -m pip install PyInstaller
 
       # - name: Show contents of directory
       #   run: ls -lah ${{ env.root }}
